--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.2.6",
     "@astrojs/check": "^0.4.1",
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/onest": "^5.0.2",
+    "@fontsource/twinkle-star": "^5.0.18",
+    "astro": "^4.2.6",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
 }
